[package]
edition = "2018"
authors = ["sopium"]
license = "GPL-3.0"
name = "titun"
repository = "https://github.com/sopium/titun"
version = "0.1.0-dev"
autobenches = false

[workspace]
exclude = ["patched"]

[lib]
bench = false

[[bin]]
doc = false
name = "titun"
path = "src/main.rs"
bench = false

[[bench]]
name = "benches"
harness = false

[features]
# Enable tests that need root privilege, e.g., unit test for tun interfaces.
# Run with:
# export CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER='sudo -E'
sudo-tests = []

[dependencies]
arrayvec = "0.5.2"
base64 = "0.13.0"
blake2s_simd = "0.5.11"
env_logger = "0.8.2"
fnv = "1.0.7"
futures = "0.3.10"
hex = "0.4.2"
log = "0.4.13"
nix = "0.19.1"
noise-protocol = "0.1.3"
num_cpus = "1.13.0"
parking_lot = "0.11.1"
rand = "0.8.2"
structopt = "0.3.21"
tai64 = "3.1.0"
ansi_term = "0.12.1"
atty = "0.2.14"
serde = { version = "1.0.120", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.38"
num-traits = "0.2.14"
tokio-util = { version = "0.6.2", features = ["codec"] }
sodiumoxide = "0.2.6"
libsodium-sys = "0.2.6"
socket2 = "0.3.15"

[dependencies.tokio]
version = "1.1.0"
features = [
    "io-std",
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "process",
    "signal",
    "macros",
    "parking_lot",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "std",
    "fileapi",
    "winbase",
    "ioapiset",
    "synchapi",
    "namedpipeapi",
    "winioctl",
    "sddl",
    "securitybaseapi",
    "namespaceapi",
    "setupapi",
    "devguid",
    "combaseapi",
    "cfgmgr32",
    "mswsock",
    "shlobj",
    "knownfolders",
    "shobjidl",
] }
winreg = "0.8.0"
scopeguard = "1.1.0"
once_cell = "1.5.2"
widestring = "0.4.3"
wchar = "0.6.1"
windows-service = "0.3.1"
serde_json = "1.0.61"
webview2 = "0.1.0-beta.1"
# 0.22.2 does not work: https://github.com/rust-windowing/winit/issues/1698
winit = "0.24.0"

[target.'cfg(unix)'.dependencies]
privdrop = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.9.2"

[dev-dependencies]
criterion = "0.3.3"
walkdir = "2.3.1"
quickcheck = "1.0.0"
quickcheck_macros = "1.0.0"

[build-dependencies]
cc = "1.0.66"
winres = { git = "https://github.com/sopium/winres.git" }

[profile.release]
lto = true
