[package]
edition = "2018"
authors = ["sopium"]
license = "GPL-3.0"
name = "titun"
repository = "https://github.com/sopium/titun"
version = "0.3.1"
autobenches = false

[workspace]
exclude = ["patched"]

[lib]
bench = false

[[bin]]
doc = false
name = "titun"
path = "src/main.rs"
bench = false

[[bench]]
name = "benches"
harness = false

[features]
# Enable tests that need root privilege, e.g., unit test for tun interfaces.
# Run with:
# export CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER='sudo -E'
sudo-tests = []

[dependencies]
arrayvec = "0.7.1"
base64 = "0.13.0"
blake2s_simd = "0.5.11"
env_logger = "0.9.0"
fnv = "1.0.7"
futures = "0.3.15"
hex = "0.4.3"
log = "0.4.14"
nix = "0.22.0"
noise-protocol = "0.1.3"
num_cpus = "1.13.0"
parking_lot = "0.11.1"
rand = "0.8.4"
structopt = "0.3.21"
tai64 = "3.1.0"
ansi_term = "0.12.1"
atty = "0.2.14"
serde = { version = "1.0.128", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.41"
num-traits = "0.2.14"
tokio-util = { version = "0.6.7", features = ["codec"] }
sodiumoxide = "0.2.7"
libsodium-sys = "0.2.7"
socket2 = "0.4.0"
itertools = "0.10.1"
scopeguard = "1.1.0"

[dependencies.tokio]
version = "1.9.0"
features = [
    "io-std",
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "process",
    "signal",
    "macros",
    "parking_lot",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "std",
    "fileapi",
    "winbase",
    "ioapiset",
    "synchapi",
    "namedpipeapi",
    "winioctl",
    "sddl",
    "securitybaseapi",
    "namespaceapi",
    "setupapi",
    "devguid",
    "combaseapi",
    "cfgmgr32",
    "mswsock",
    "shlobj",
    "knownfolders",
    "shobjidl",
] }
winreg = "0.9.0"
once_cell = "1.8.0"
widestring = "0.4.3"
wchar = "0.10.1"
windows-service = "0.3.1"
serde_json = "1.0.64"
webview2 = "0.1.0"
# 0.22.2 does not work: https://github.com/rust-windowing/winit/issues/1698
winit = "0.25.0"

[target.'cfg(unix)'.dependencies]
privdrop = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.9.3"

[dev-dependencies]
criterion = "0.3.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[build-dependencies]
cc = "1.0.68"
winres = { git = "https://github.com/sopium/winres.git" }

[profile.release]
lto = true
