[package]
edition = "2018"
authors = ["sopium"]
license = "GPL-3.0"
name = "titun"
repository = "https://github.com/sopium/titun"
version = "0.3.3"
autobenches = false

[workspace]

[lib]
bench = false

[[bin]]
doc = false
name = "titun"
path = "src/main.rs"
bench = false

[[bench]]
name = "benches"
harness = false

[features]
# Enable tests that need root privilege, e.g., unit test for tun interfaces.
# Run with:
# export CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER='sudo -E'
sudo-tests = []

[dependencies]
arrayvec = "0.7.2"
base64 = "0.13.0"
blake2s_simd = "1.0.0"
env_logger = "0.9.0"
fnv = "1.0.7"
futures = "0.3.21"
hex = "0.4.3"
log = "0.4.14"
nix = "0.26.1"
noise-protocol = "0.1.3"
num_cpus = "1.13.1"
parking_lot = "0.12.0"
rand = "0.8.5"
tai64 = "4.0.0"
ansi_term = "0.12.1"
atty = "0.2.14"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.53"
num-traits = "0.2.14"
tokio-util = { version = "0.7.0", features = ["codec"] }
socket2 = "0.4.4"
itertools = "0.10.3"
scopeguard = "1.1.0"
titun-hacl = { git = "https://github.com/sopium/titun-hacl.git" }
clap = { version = "3.2.6", features = ["derive", "cargo", "env"] }

[dependencies.tokio]
version = "1.17.0"
features = [
    "io-std",
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "process",
    "signal",
    "macros",
    "parking_lot",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "std",
    "fileapi",
    "winbase",
    "ioapiset",
    "synchapi",
    "namedpipeapi",
    "winioctl",
    "sddl",
    "securitybaseapi",
    "namespaceapi",
    "setupapi",
    "devguid",
    "combaseapi",
    "cfgmgr32",
    "mswsock",
    "shlobj",
    "knownfolders",
    "shobjidl",
] }
winreg = "0.10.1"
once_cell = "1.12.0"
widestring = "0.5.1"
wchar = "0.11.0"
windows-service = "0.4.0"
serde_json = "1.0.79"
webview2 = "0.1.4"
winit = "0.26.1"

[target.'cfg(unix)'.dependencies]
privdrop = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10.0"

[dev-dependencies]
criterion = "0.3.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[build-dependencies]
cc = "1.0.73"
winres = "0.1.12"

[profile.release]
lto = true
