[package]
name = "ip-lookup-trie"
version = "0.1.0"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
edition = "2018"

[lib]
bench = false

[[bench]]
name = "match"
harness = false

[dependencies]
num-traits = "0.2.6"

[dev-dependencies]
rand = "0.7"
quickcheck = "0.9"
quickcheck_macros = "0.8"
criterion = "0.3.0"
